--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace=never
+
+# jwt
+jwt.secret = hifdshfkjshfwi
+jwt.expiration = 86400000
+security.username-query = select u from usuario u where u.email = :username
